--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
 </head>
 
 <body>
-
-  
-     
   <div class="container home">
+      <header>
+        <nav>
+          <h1>FUN BUS</h1>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="#">Products</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+        <img class="Bus" src="fun-bus.jpg" alt="Bus!">
+      </header>
+
    
     <section class="content-section">
       <div class="text-content">
@@ -51,17 +60,19 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn-container">
+          <button class="new-btn">Sign Me Up!</button>
+          <button class="new-btn-2">Sign Me Up!</button>
+          <button class="new-btn-3">Sign Me Up!</button>
+        </div>
       </div>
     </section>
   </div><!-- container -->
