--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
 </head>
 
 <body>
-  <div class="container home">
-      <header>
-        <nav>
-          <h1>FUN BUS</h1>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
-        </nav>
-        <img class="Bus" src="fun-bus.jpg" alt="Bus!">
-      </header>
 
-   
+  <header class="main-navigation">
+    <div class="container nav-container">
+      <h1 class="logo-heading">Fun Bus</h1>
+      <nav class="nav">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+     
+  <div class="container home">
+    <header class="intro">
+      <img src="img/fun-bus.jpg" alt="bus in the sand">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+    </header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
@@ -60,19 +65,17 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+        <div class="btn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+        <div class="btn">Sign Me Up!</div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn-container">
-          <button class="new-btn">Sign Me Up!</button>
-          <button class="new-btn-2">Sign Me Up!</button>
-          <button class="new-btn-3">Sign Me Up!</button>
-        </div>
+        <div class="btn">Sign Me Up!</div>
       </div>
     </section>
   </div><!-- container -->
